[HDDL2] Merge kmb plugin to VPUX

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,9 +19,16 @@ add_subdirectory(vpux_al)
 add_subdirectory(vpual_backend)
 add_subdirectory(mcmCompiler)
 add_subdirectory(frontend_mcm)
+
+# TODO Should be only on AARCH64. Enabled for kmbPlugin Windows build 
+#if(AARCH64)
+    add_subdirectory(hddl2_plugin/preproc_gapi)
+#endif()
+
 add_subdirectory(kmb_plugin)
+# TODO Rename to vpux_plugin
+add_subdirectory(hddl2_plugin)
 if(ENABLE_HDDL2)
-    add_subdirectory(hddl2_plugin)
     add_subdirectory(hddl2_backend)
 endif()
 if(ENABLE_ZEROAPI_BACKEND)
