Disable custom OpenCL kernels tests on Windows

--- a/tests/functional/CMakeLists.txt
+++ b/tests/functional/CMakeLists.txt
@@ -21,6 +21,7 @@ addIeTargetTest(
         IE::ngraph_reference
         IE::format_reader
         kmb_utils
+        kmb_custom_kernels
     DEFINES
         DATA_PATH=\"${DATA_PATH}\"
         MODELS_PATH=\"${MODELS_PATH}\"
