fix scale fuse in case there is powerIE node in graph instead of scaleshiftIE

--- a/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv.json
@@ -24,7 +24,7 @@
                 "Int32Output": false,
                 "PPEAccuracy": false,
                 "PWLUsage": true,
-                "ScaleFuseInput": true,
+                "ScaleFuseInput": false,
                 "ReferenceMode": false,
                 "split_strategy" :
                 [
