--- a/src/mcmCompiler/config/compilation/release_kmb-sc_hde.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sc_hde.json
@@ -23,7 +23,7 @@
                 "FloatOutput": true,
                 "Int32Output": false,
                 "PPEAccuracy": false,
-                "ScaleFuseInput": true,
+                "ScaleFuseInput": false,
                 "PWLUsage": true,
                 "ReferenceMode": false,
                 "split_strategy" :
