--- a/src/mcmCompiler/config/compilation/release_kmb_B0.json
+++ b/src/mcmCompiler/config/compilation/release_kmb_B0.json
@@ -25,7 +25,7 @@
                 "PPEAccuracy": false,
                 "PWLUsage": true,
                 "ReferenceMode": false,
-                "ScaleFuseInput": true,
+                "ScaleFuseInput": false,
                 "split_strategy" :
                 [
                     {
