--- a/.gitmodules
+++ b/.gitmodules
@@ -11,5 +11,5 @@
 	path = thirdparty/llvm-project
 	url = ../llvm-project.git
 [submodule "mcm-emulator"]
-	path = thirdparty/mcm-emulator
+	path = src/mcmCompiler/contrib/mcm-emulator
 	url = ssh://git@gitlab-icv.inn.intel.com/kmb-emulator/mcm-emulator.git
