--- a/src/experimental/vpux_utils_vpuip/CMakeLists.txt
+++ b/src/experimental/vpux_utils_vpuip/CMakeLists.txt
@@ -21,46 +21,12 @@ set(SCHEMA_TARGET_NAME "${TARGET_NAME}_schema")
 # Schema target
 #
 
-set(schema_src_dir "${IE_MAIN_VPUX_PLUGIN_SOURCE_DIR}/thirdparty/graphFile-schema/src/schema")
-
-file(GLOB FBS_SOURCES "${schema_src_dir}/*.fbs")
-source_group(TREE ${IE_MAIN_VPUX_PLUGIN_SOURCE_DIR} FILES ${FBS_SOURCES})
-
-set(schema_dst_dir "${CMAKE_CURRENT_BINARY_DIR}/include/vpux/utils/VPUIP/schema/generated")
-file(MAKE_DIRECTORY ${schema_dst_dir})
-
-set(schema_dst_files)
-foreach(src_file IN LISTS FBS_SOURCES)
-    get_filename_component(file_name_we ${src_file} NAME_WE)
-    set(dst_file "${schema_dst_dir}/${file_name_we}_generated.h")
-    list(APPEND schema_dst_files ${dst_file})
-endforeach()
-
-# TODO: Add `--scoped-enums` once schema is fixed
-add_custom_command(
-    OUTPUT
-        ${schema_dst_files}
-    COMMAND
-        ${flatc_COMMAND} -o ${schema_dst_dir} --cpp --gen-name-strings ${FBS_SOURCES}
-    DEPENDS
-        ${FBS_SOURCES}
-        ${flatc_COMMAND}
-    COMMENT
-        "[flatc] Generating VPUIP schema ..."
-    VERBATIM
-)
-
-add_custom_target(${SCHEMA_TARGET_NAME}
-    DEPENDS
-        ${schema_dst_files}
-    SOURCES
-        ${FBS_SOURCES}
+vpux_add_flatc_target(${SCHEMA_TARGET_NAME}
+    SRC_DIR "${IE_MAIN_VPUX_PLUGIN_SOURCE_DIR}/thirdparty/graphFile-schema/src/schema"
+    DST_DIR "${CMAKE_CURRENT_BINARY_DIR}/include/vpux/utils/VPUIP/schema/generated"
+    ARGS "--gen-name-strings"
 )
 set_target_properties(${SCHEMA_TARGET_NAME} PROPERTIES FOLDER "src")
-
-if(TARGET BUILD_flatc)
-    add_dependencies(${SCHEMA_TARGET_NAME} BUILD_flatc)
-endif()
 
 #
 # Main target
