Fix LIT tests on Windows
Set `config.lit_tools_dir` to empty string to force tools search in `%PATH%`.

--- a/cmake/lit.site.cfg.py.in
+++ b/cmake/lit.site.cfg.py.in
@@ -24,6 +24,8 @@ config.suffixes = [@SUFFIXES@]
 config.bin_dir = path('../..')
 config.bin_dir = config.bin_dir % lit_config.params
 
+config.lit_tools_dir = ''
+
 @EXTRA_SUBSTITUTIONS@
 
 lit.llvm.initialize(lit_config, config)
