Add support for experimental compiler in OV shared functional tests
* Add `IE_VPUX_USE_EXPERIMENTAL_COMPILER` option to `KmbTestEnvConfig`.
  It is available only if `ENABLE_EXPERIMENTAL_MLIR` CMake option is turned on.
* Add `IE_KMB_TESTS_RUN_COMPILER` option to `KmbTestEnvConfig`.
  Its default value depends on platform architecture (`true` for x86, `false` for ARM64).
* Adjust default value for `IE_KMB_TESTS_RUN_INFER` option in the same way.
* Add `IE_KMB_TESTS_RUN_EXPORT` option to `KmbTestEnvConfig`.
  Its default value matches `IE_KMB_TESTS_RUN_COMPILER`.
  Add assertion to `KmbTestTool::exportNetwork` that `IE_KMB_TESTS_DUMP_PATH` is not empty.
* Set default values for all `KmbTestEnvConfig` fields in declaration to avoid uninitialized values at run-time.
* Set `LOG_LEVEL` globally to the plugin, not only to `LoadNetwork`.
  It will allow to get logs from back-ends during network importing.
* Add `KmbLayerTestsCommon::SkipBeforeLoad` method to skip compilation in some cases.
* Remove `#ifdef` from `KmbLayerTestsCommon::Run`, rely on `KmbTestEnvConfig`.
* Adjust SoftMax per-layer test:
  * Add `SkipBeforeLoad` with checks for current experimental compiler limitations.
  * Skip load for `shape[axis]==1` cases, they are not supported by run-time (error on blob parsing stage).
  * Enable inference and results validation in other cases.

--- a/tests/functional/CMakeLists.txt
+++ b/tests/functional/CMakeLists.txt
@@ -29,3 +29,10 @@ addIeTargetTest(
     LABELS
         KMB
 )
+
+if(ENABLE_EXPERIMENTAL_MLIR)
+    target_compile_definitions(${TARGET_NAME}
+        PRIVATE
+            ENABLE_EXPERIMENTAL_MLIR
+    )
+endif()
