--- a/src/experimental/vpux_compiler/CMakeLists.txt
+++ b/src/experimental/vpux_compiler/CMakeLists.txt
@@ -255,6 +255,7 @@ link_system_libraries(${OBJ_TARGET_NAME}
         MLIRTranslation
         MLIRStandardOpsTransforms
         MLIRLinalg
+        MLIRAffine
         flatbuffers
         # TODO: get rid of this dependency
         IE::vpu_common_lib
