--- a/src/mcmCompiler/config/compilation/release_kmb.json
+++ b/src/mcmCompiler/config/compilation/release_kmb.json
@@ -9,6 +9,8 @@
                 "weights_form": "None",
                 "referenceDevice": "A0",
                 "barrier_index_assignment" : "Dynamic",
+                "systemClockMhz" : 500,
+                "memoryBandwidth" : 16,
                 "Number_of_DPUs" : 20,
                 "Number_of_Clusters" : 4,
                 "UpaShaves": 1,
