remove use of emulator from compiler

--- a/src/mcmCompiler/CMakeLists.txt
+++ b/src/mcmCompiler/CMakeLists.txt
@@ -292,6 +292,12 @@ set(syscalls
 
 add_subdirectory(meta)
 add_subdirectory(tools)
+add_subdirectory(contrib/mcm-emulator)
+
+if(TARGET mcm_emulator)
+    set(EMULATOR mcm_emulator)
+    set(TARGET_OBJECTS_EMULATOR $<TARGET_OBJECTS:mcm_emulator>)
+endif()
 
 set_source_files_properties(
     "${META_DIR_PATH}/src/compositional_model.cpp"
@@ -302,7 +308,7 @@ set_source_files_properties(
 
 add_library(mcmCompiler SHARED
     ${base} ${model} ${logger} ${pass} ${compiler} ${syscalls}
-    $<TARGET_OBJECTS:mcm_emulator>
+    ${TARGET_OBJECTS_EMULATOR}
     "${META_DIR_PATH}/src/compositional_model.cpp"
     "${META_DIR_PATH}/src/op_model.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/lp_scheduler/lp_scheduler_pass.cpp"
@@ -313,17 +319,14 @@ set_target_properties(mcmCompiler PROPERTIES
     SOVERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}"
 )
 
-#
-# MCM Emulator
-#
-add_subdirectory(contrib/mcm-emulator)
-
 if(MSVC)
     set_target_properties(mcmCompiler PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
 endif()
 
 add_dependencies(mcmCompiler mcmCompilerGenSchema mcmCompilerGenCompAPI)
-add_dependencies(mcm_emulator mcmCompilerGenCompAPI)
+if(TARGET mcm_emulator)
+    add_dependencies(mcm_emulator mcmCompilerGenCompAPI)
+endif()
 
 target_include_directories(mcmCompiler
     PUBLIC
@@ -342,7 +345,7 @@ target_include_directories(mcmCompiler
 target_link_libraries(mcmCompiler
     PRIVATE
         flatbuffers
-        mcm_emulator
+        ${EMULATOR}
 )
 
 #############################################################################################
