Extract NetInfo/DataInfo interfaces into core part

--- a/src/experimental/vpux_compiler/CMakeLists.txt
+++ b/src/experimental/vpux_compiler/CMakeLists.txt
@@ -170,6 +170,8 @@ macro(add_rewriters subdir)
     unset(rewriters_sources)
 endmacro()
 
+add_op_interfaces("core")
+
 add_enum_attrs("dialect/IE")
 add_op_interfaces("dialect/IE")
 add_dialect("IE")
