[TBH] Fix archive name for HddlUnite TBH

--- a/src/vpux_plugin/CMakeLists.txt
+++ b/src/vpux_plugin/CMakeLists.txt
@@ -106,13 +106,13 @@ if(ENABLE_HDDL2)
                 "${HDDL_UNITE}/thirdparty/XLink/lib/"
                 "$<TARGET_FILE_DIR:${VPUX_PLUGIN_TARGET}>"
             COMMAND ${CMAKE_COMMAND} -E make_directory
-                "$<TARGET_FILE_DIR:${VPUX_PLUGIN_TARGET}>/tbh"
+                "$<TARGET_FILE_DIR:${VPUX_PLUGIN_TARGET}>/vpux_4"
             COMMAND ${CMAKE_COMMAND} -E copy_directory
-                "${HDDL_UNITE_TBH}/lib/"
-                "$<TARGET_FILE_DIR:${VPUX_PLUGIN_TARGET}>/tbh/"
+                "${HDDL_UNITE_VPUX_4}/lib/"
+                "$<TARGET_FILE_DIR:${VPUX_PLUGIN_TARGET}>/vpux_4/"
             COMMAND ${CMAKE_COMMAND} -E copy_directory
-                "${HDDL_UNITE_TBH}/thirdparty/XLink/lib/"
-                "$<TARGET_FILE_DIR:${VPUX_PLUGIN_TARGET}>/tbh/"
+                "${HDDL_UNITE_VPUX_4}/thirdparty/XLink/lib/"
+                "$<TARGET_FILE_DIR:${VPUX_PLUGIN_TARGET}>/vpux_4/"
             COMMENT "[HDDL Unite] Copy libraries"
         )
     endif()
