--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "thirdparty/llvm-project"]
 	path = thirdparty/llvm-project
 	url = ../llvm-project.git
+[submodule "mcm-emulator"]
+	path = src/mcmCompiler/contrib/mcm-emulator
+	url = ../../kmb-emulator/mcm-emulator.git
