72 fps yolo v2 with new go update

--- a/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv.json
+++ b/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv.json
@@ -224,6 +224,13 @@
             },
             "StoreGraphOptimizerDecisions",
             {
+                "name": "GenerateDot",
+                "output": "output/dots/final.dot",
+                "scope": "OpModel",
+                "content": "full",
+                "html": true
+            },
+            {
                 "name" : "AddOptimalChainPipeliningStrategies",
                 "select_stages" : 2,
                 "AddOptimalChainPipeliningStrategiesConfig" : {
@@ -379,7 +386,7 @@
             {
                 "name": "GenerateDot",
                 "output": "output/dots/final.dot",
-                "scope": "ControlModel",
+                "scope": "OpModel",
                 "content": "full",
                 "html": true
             },
